--- a/spiffs/index.html
+++ b/spiffs/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -323,6 +322,7 @@
   </div>
 
   <!-- ESP32 httpd serves this at /script.js -->
+  <script src="./globalData.js"></script>
   <script src="./script.js"></script>
 </body>
 </html>
